--- a/src/app/widgets/comment/comment.component.scss
+++ b/src/app/widgets/comment/comment.component.scss
@@ -49,3 +49,8 @@
     transform: none !important;
   }
 }
+
+.all-comments {
+  background-color: var.$white-color;
+  border: 1px solid var.$grey-color-2;
+}
