--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -2,57 +2,153 @@ $black-color: #000000;
 $white-color: #ffffff;
 
 $grey-color-1: #f8f9fa;
+$grey-color-1-lighten: lighten($grey-color-1, 5%);
+$grey-color-1-darken: darken($grey-color-1, 5%);
 $grey-color-2: #dee2e6;
+$grey-color-2-lighten: lighten($grey-color-2, 5%);
+$grey-color-2-darken: darken($grey-color-2, 5%);
 $grey-color-3: #adb5bd;
+$grey-color-3-lighten: lighten($grey-color-3, 5%);
+$grey-color-3-darken: darken($grey-color-3, 5%);
 $grey-color-4: #495057;
+$grey-color-4-lighten: lighten($grey-color-4, 5%);
+$grey-color-4-darken: darken($grey-color-4, 5%);
 $grey-color-5: #343a40;
+$grey-color-5-lighten: lighten($grey-color-5, 5%);
+$grey-color-5-darken: darken($grey-color-5, 5%);
 $grey-color-6: #212529;
+$grey-color-6-lighten: lighten($grey-color-6, 5%);
+$grey-color-6-darken: darken($grey-color-6, 5%);
 
 $red-color-1: #eaa8a8;
+$red-color-1-lighten: lighten($red-color-1, 5%);
+$red-color-1-darken: darken($red-color-1, 5%);
 $red-color-2: #e56b6b;
+$red-color-2-lighten: lighten($red-color-2, 5%);
+$red-color-2-darken: darken($red-color-2, 5%);
 $red-color-3: #ec4040;
+$red-color-3-lighten: lighten($red-color-3, 5%);
+$red-color-3-darken: darken($red-color-3, 5%);
 $red-color-4: #de1616;
+$red-color-4-lighten: lighten($red-color-4, 5%);
+$red-color-4-darken: darken($red-color-4, 5%);
 $red-color-5: #bb0000;
+$red-color-5-lighten: lighten($red-color-5, 5%);
+$red-color-5-darken: darken($red-color-5, 5%);
 $red-color-6: #aa0000;
+$red-color-6-lighten: lighten($red-color-6, 5%);
+$red-color-6-darken: darken($red-color-6, 5%);
 
 $orange-color-1: #ffb600;
+$orange-color-1-lighten: lighten($orange-color-1, 5%);
+$orange-color-1-darken: darken($orange-color-1, 5%);
 $orange-color-2: #ff9e00;
+$orange-color-2-lighten: lighten($orange-color-2, 5%);
+$orange-color-2-darken: darken($orange-color-2, 5%);
 $orange-color-3: #ff8500;
+$orange-color-3-lighten: lighten($orange-color-3, 5%);
+$orange-color-3-darken: darken($orange-color-3, 5%);
 $orange-color-4: #ff6d00;
+$orange-color-4-lighten: lighten($orange-color-4, 5%);
+$orange-color-4-darken: darken($orange-color-4, 5%);
 $orange-color-5: #ff5400;
+$orange-color-5-lighten: lighten($orange-color-5, 5%);
+$orange-color-5-darken: darken($orange-color-5, 5%);
 $orange-color-6: #ff4800;
+$orange-color-6-lighten: lighten($orange-color-6, 5%);
+$orange-color-6-darken: darken($orange-color-6, 5%);
 
 $yellow-color-1: #fffae5;
+$yellow-color-1-lighten: lighten($yellow-color-1, 5%);
+$yellow-color-1-darken: darken($yellow-color-1, 5%);
 $yellow-color-2: #fff2b2;
+$yellow-color-2-lighten: lighten($yellow-color-2, 5%);
+$yellow-color-2-darken: darken($yellow-color-2, 5%);
 $yellow-color-3: #ffe97f;
+$yellow-color-3-lighten: lighten($yellow-color-3, 5%);
+$yellow-color-3-darken: darken($yellow-color-3, 5%);
 $yellow-color-4: #ffe14c;
+$yellow-color-4-lighten: lighten($yellow-color-4, 5%);
+$yellow-color-4-darken: darken($yellow-color-4, 5%);
 $yellow-color-5: #ffd819;
+$yellow-color-5-lighten: lighten($yellow-color-5, 5%);
+$yellow-color-5-darken: darken($yellow-color-5, 5%);
 $yellow-color-6: #ffd400;
+$yellow-color-6-lighten: lighten($yellow-color-6, 5%);
+$yellow-color-6-darken: darken($yellow-color-6, 5%);
 
 $brown-color-1: #ffedd8;
+$brown-color-1-lighten: lighten($brown-color-1, 5%);
+$brown-color-1-darken: darken($brown-color-1, 5%);
 $brown-color-2: #e7bc91;
+$brown-color-2-lighten: lighten($brown-color-2, 5%);
+$brown-color-2-darken: darken($brown-color-2, 5%);
 $brown-color-3: #bc8a5f;
+$brown-color-3-lighten: lighten($brown-color-3, 5%);
+$brown-color-3-darken: darken($brown-color-3, 5%);
 $brown-color-4: #8b5e34;
+$brown-color-4-lighten: lighten($brown-color-4, 5%);
+$brown-color-4-darken: darken($brown-color-4, 5%);
 $brown-color-5: #603808;
+$brown-color-5-lighten: lighten($brown-color-5, 5%);
+$brown-color-5-darken: darken($brown-color-5, 5%);
 $brown-color-6: #583101;
+$brown-color-6-lighten: lighten($brown-color-6, 5%);
+$brown-color-6-darken: darken($brown-color-6, 5%);
 
 $green-color-1: #b7efc5;
+$green-color-1-lighten: lighten($green-color-1, 5%);
+$green-color-1-darken: darken($green-color-1, 5%);
 $green-color-2: #6ede8a;
+$green-color-2-lighten: lighten($green-color-2, 5%);
+$green-color-2-darken: darken($green-color-2, 5%);
 $green-color-3: #2dc653;
+$green-color-3-lighten: lighten($green-color-3, 5%);
+$green-color-3-darken: darken($green-color-3, 5%);
 $green-color-4: #208b3a;
+$green-color-4-lighten: lighten($green-color-4, 5%);
+$green-color-4-darken: darken($green-color-4, 5%);
 $green-color-5: #155d27;
+$green-color-5-lighten: lighten($green-color-5, 5%);
+$green-color-5-darken: darken($green-color-5, 5%);
 $green-color-6: #10451d;
+$green-color-6-lighten: lighten($green-color-6, 5%);
+$green-color-6-darken: darken($green-color-6, 5%);
 
 $blue-color-1: #e3f2fd;
+$blue-color-1-lighten: lighten($blue-color-1, 5%);
+$blue-color-1-darken: darken($blue-color-1, 5%);
 $blue-color-2: #90caf9;
+$blue-color-2-lighten: lighten($blue-color-2, 5%);
+$blue-color-2-darken: darken($blue-color-2, 5%);
 $blue-color-3: #42a5f5;
+$blue-color-3-lighten: lighten($blue-color-3, 5%);
+$blue-color-3-darken: darken($blue-color-3, 5%);
 $blue-color-4: #1e88e5;
+$blue-color-4-lighten: lighten($blue-color-4, 5%);
+$blue-color-4-darken: darken($blue-color-4, 5%);
 $blue-color-5: #1565c0;
+$blue-color-5-lighten: lighten($blue-color-5, 5%);
+$blue-color-5-darken: darken($blue-color-5, 5%);
 $blue-color-6: #0d47a1;
+$blue-color-6-lighten: lighten($blue-color-6, 5%);
+$blue-color-6-darken: darken($blue-color-6, 5%);
 
 $violet-color-1: #dec9e9;
+$violet-color-1-lighten: lighten($violet-color-1, 5%);
+$violet-color-1-darken: darken($violet-color-1, 5%);
 $violet-color-2: #d2b7e5;
+$violet-color-2-lighten: lighten($violet-color-2, 5%);
+$violet-color-2-darken: darken($violet-color-2, 5%);
 $violet-color-3: #b185db;
+$violet-color-3-lighten: lighten($violet-color-3, 5%);
+$violet-color-3-darken: darken($violet-color-3, 5%);
 $violet-color-4: #9163cb;
+$violet-color-4-lighten: lighten($violet-color-4, 5%);
+$violet-color-4-darken: darken($violet-color-4, 5%);
 $violet-color-5: #7251b5;
+$violet-color-5-lighten: lighten($violet-color-5, 5%);
+$violet-color-5-darken: darken($violet-color-5, 5%);
 $violet-color-6: #6247aa;
+$violet-color-6-lighten: lighten($violet-color-6, 5%);
+$violet-color-6-darken: darken($violet-color-6, 5%);
