--- a/src/app/pages/authorize/authorize.component.scss
+++ b/src/app/pages/authorize/authorize.component.scss
@@ -6,5 +6,5 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background-color: var.$blue-color-1;
+  background-color: var.$grey-color-1;
 }
