--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -5,6 +5,11 @@
   min-height: 100vh;
 }
 
+nz-header {
+  position: fixed;
+  z-index: 10;
+}
+
 nz-sider {
   overflow: auto;
   height: 100%;
@@ -13,12 +18,9 @@ nz-sider {
 }
 
 nz-content {
-  background-color: var.$blue-color-1;
+  transition: margin-left ease 0.15s;
+  background-color: var.$grey-color-1;
   overflow: initial;
-
-  & > div {
-    background-color: var.$white-color;
-  }
 }
 
 .sidebar {
@@ -33,5 +35,5 @@ nz-content {
 
 nz-footer {
   text-align: center;
-  background-color: var.$blue-color-1;
+  background-color: var.$grey-color-1;
 }
