KAM-89: [FE] Internationalization KAM-90: [FE] Internationalization `Authorize` module Added `RU` and 'US' translation Added `app-locale-switcher` component Added `RU` and 'US' translation for `Authorize` module

--- a/src/app/pages/authorize/authorize.component.scss
+++ b/src/app/pages/authorize/authorize.component.scss
@@ -8,3 +8,9 @@
   justify-content: center;
   background-color: var.$grey-color-1;
 }
+
+app-locale-switcher {
+  position: absolute;
+  top: 15px;
+  right: 50px;
+}
