--- a/src/app/pages/authorize/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/authorize/pages/sign-in/sign-in.component.html
@@ -6,43 +6,55 @@
     </div>
   </nz-carousel>
   <div>
-    <h1 class="align-self-center font-weight-medium text-grey-1" [style.font-size.px]="32">Welcome back!</h1>
-    <p class="m-0 text-grey-1">
-      Get more information about the game mode, game servers, player statistics and much more!
-    </p>
+    <h1 class="font-weight-medium text-grey-1" [style.font-size.px]="32" [style.line-height.px]="32">
+      {{ 'authorize.signIn.desc_Title' | translate }}
+    </h1>
+    <p class="m-0 text-grey-1">{{ 'authorize.signIn.desc' | translate }}</p>
   </div>
 </div>
 
 <div class="right-container d-flex flex-column gap-4 p-8 pt-10">
-  <h1 class="align-self-center font-weight-medium mb-10" [style.font-size.px]="32">Log In</h1>
+  <h1 class="text-center font-weight-medium mb-10" [style.font-size.px]="32">
+    {{ 'authorize.signIn.page_Title' | translate }}
+  </h1>
   <div class="d-flex flex-column text-grey-3">
     <div class="d-flex align-items-center">
-      <p class="m-0">Don't have an account?</p>
-      <app-button btnClass="px-1" type="link" label="Create an account" link="../sign-up"></app-button>
+      <p class="m-0">{{ 'authorize.signIn.signUp_Hint_1' | translate }}</p>
+      <app-button
+        btnClass="px-1"
+        type="link"
+        [label]="'authorize.signIn.signUp' | translate"
+        link="../sign-up"
+      ></app-button>
     </div>
-    <p class="m-0">It will take less than a minute.</p>
+    <p class="m-0">{{ 'authorize.signIn.signUp_Hint_2' | translate }}</p>
   </div>
   <form nz-form nzLayout="vertical" [formGroup]="form">
     <app-reactive-input
       fieldId="login"
-      label="Username"
+      [label]="'authorize.signIn.userName' | translate"
       [textBefore]="userBeforeTextTmp"
       [control]="form.controls.login"
     ></app-reactive-input>
     <app-reactive-input
       fieldId="password"
-      label="Password"
+      [label]="'authorize.signIn.password' | translate"
       [textBefore]="passwordBeforeTextTmp"
       [control]="form.controls.password"
     ></app-reactive-input>
   </form>
-  <app-button class="align-self-end" type="primary" label="Sign in" [action$]="signIn$"></app-button>
+  <app-button
+    class="align-self-end"
+    type="primary"
+    [label]="'authorize.signIn.signIn' | translate"
+    [action$]="signIn$"
+  ></app-button>
   <app-button
     class="align-self-center"
     btnClass="px-1"
     type="link"
-    label="Forget your password?"
     link="../recover-account"
+    [label]="'authorize.signIn.recoverAccount' | translate"
   ></app-button>
 </div>
 
