--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,6 +1,7 @@
 <nz-layout class="d-flex flex-column">
-  <nz-header class="w-100 d-flex content-end">
+  <nz-header class="d-flex align-items-center content-end gap-4 w-100">
     <app-button type="primary" label="Logout" leftIcon="logout" [action$]="logout"></app-button>
+    <app-locale-switcher></app-locale-switcher>
   </nz-header>
 
   <nz-layout class="mt-16">
