--- a/src/app/widgets/reactive-fields/reactive-select/reactive-select.component.html
+++ b/src/app/widgets/reactive-fields/reactive-select/reactive-select.component.html
@@ -1,5 +1,11 @@
-<nz-form-item *ngIf="control" [class.validation]="control.dirty && (getErrorMessage | executeWith : control.errors)">
+<nz-form-item
+  *ngIf="control"
+  [class.validation]="control.dirty && (getErrorMessage | executeWith : control.errors)"
+  [class.mb-0]="noMarginBottom"
+  [class.mb-3]="!noMarginBottom"
+>
   <nz-form-label
+    *ngIf="label"
     [nzFor]="fieldId"
     [nzRequired]="!noValidationMark && hasRequiredValidator"
     [nzTooltipTitle]="tooltipTitle"
@@ -10,51 +16,63 @@
   >
     {{ label }}
   </nz-form-label>
+
   <nz-form-control
+    class="w-100 mb-0"
     [nzValidateStatus]="status"
     [nzErrorTip]="getErrorMessage | executeWith : control.errors"
     [nzSpan]="fieldSpan"
   >
-    <nz-select
-      [nzId]="fieldId"
-      [formControl]="control"
-      [nzOptions]="options ?? []"
-      [nzAutoClearSearchValue]="isAutoClearSearch"
-      [nzAllowClear]="isAllowClear"
-      [nzBackdrop]="isBackdrop"
-      [nzBorderless]="isBorderless"
-      [nzOpen]="isOpen"
-      [nzDisabled]="isDisabled"
-      [nzDropdownClassName]="dropdownClassName ?? null"
-      [nzDropdownMatchSelectWidth]="isDropdownWidthAsSelect"
-      [nzDropdownStyle]="dropdownStyle ?? null"
-      [nzCustomTemplate]="customTemplate ?? null"
-      [nzServerSearch]="isServerSearch"
-      [nzFilterOption]="filterOptionFn"
-      [nzMaxMultipleCount]="maxMultipleCount"
-      [nzMode]="mode"
-      [nzPlacement]="placement"
-      [nzNotFoundContent]="notFoundContent"
-      [nzPlaceHolder]="placeholder"
-      [nzShowArrow]="isShowArrow"
-      [nzShowSearch]="isShowSearch"
+    <nz-input-group
+      [nzAddOnBefore]="textBefore"
+      [nzAddOnAfter]="textAfter"
+      [nzPrefix]="prefix"
+      [nzPrefixIcon]="prefixIcon"
+      [nzSuffix]="suffix"
+      [nzSuffixIcon]="suffixIcon"
       [nzSize]="fieldSize"
-      [nzStatus]="status"
-      [nzSuffixIcon]="suffixIcon ?? null"
-      [nzRemoveIcon]="removeIcon ?? null"
-      [nzClearIcon]="clearIcon ?? null"
-      [nzMenuItemSelectedIcon]="menuItemSelectedIconIcon ?? null"
-      [nzTokenSeparators]="tokenSeparators"
-      [nzLoading]="isLoading"
-      [nzMaxTagCount]="maxTagCount"
-      [nzMaxTagPlaceholder]="maxTagPlaceholder ?? defauldMaxTagPlaceholder"
-      [nzOptionHeightPx]="optionHeightPx"
-      [nzOptionOverflowSize]="optionOverflowSize"
-      (ngModelChange)="valueChange.emit($event)"
-      (nzOpenChange)="openChanged.emit($event)"
-      (nzScrollToBottom)="scrollToBottom.emit($event)"
-      (nzOnSearch)="searchChanged.emit($event)"
-    ></nz-select>
+    >
+      <nz-select
+        [nzId]="fieldId"
+        [formControl]="control"
+        [nzOptions]="options ?? []"
+        [nzAutoClearSearchValue]="isAutoClearSearch"
+        [nzAllowClear]="isAllowClear"
+        [nzBackdrop]="isBackdrop"
+        [nzBorderless]="isBorderless"
+        [nzOpen]="isOpen"
+        [nzDisabled]="isDisabled"
+        [nzDropdownClassName]="dropdownClassName ?? null"
+        [nzDropdownMatchSelectWidth]="isDropdownWidthAsSelect"
+        [nzDropdownStyle]="dropdownStyle ?? null"
+        [nzCustomTemplate]="customTemplate ?? null"
+        [nzServerSearch]="isServerSearch"
+        [nzFilterOption]="filterOptionFn"
+        [nzMaxMultipleCount]="maxMultipleCount"
+        [nzMode]="mode"
+        [nzPlacement]="placement"
+        [nzNotFoundContent]="notFoundContent"
+        [nzPlaceHolder]="placeholder"
+        [nzShowArrow]="isShowArrow"
+        [nzShowSearch]="isShowSearch"
+        [nzSize]="fieldSize"
+        [nzStatus]="status"
+        [nzSuffixIcon]="suffixIcon ?? null"
+        [nzRemoveIcon]="removeIcon ?? null"
+        [nzClearIcon]="clearIcon ?? null"
+        [nzMenuItemSelectedIcon]="menuItemSelectedIconIcon ?? null"
+        [nzTokenSeparators]="tokenSeparators"
+        [nzLoading]="isLoading"
+        [nzMaxTagCount]="maxTagCount"
+        [nzMaxTagPlaceholder]="maxTagPlaceholder ?? defauldMaxTagPlaceholder"
+        [nzOptionHeightPx]="optionHeightPx"
+        [nzOptionOverflowSize]="optionOverflowSize"
+        (ngModelChange)="valueChange.emit($event)"
+        (nzOpenChange)="openChanged.emit($event)"
+        (nzScrollToBottom)="scrollToBottom.emit($event)"
+        (nzOnSearch)="searchChanged.emit($event)"
+      ></nz-select>
+    </nz-input-group>
   </nz-form-control>
 </nz-form-item>
 
