--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<ng-container *ngIf="setLocale | executeWith : (getLocale$ | async)"></ng-container>
+
 <div class="layout">
   <router-outlet></router-outlet>
 </div>
