--- a/src/app/widgets/sidebar/sidebar.component.html
+++ b/src/app/widgets/sidebar/sidebar.component.html
@@ -26,18 +26,18 @@
       [nzMatchRouter]="!!item.link"
       [nzMatchRouterExact]="!!item.link"
     >
-      <span nz-icon [nzType]="item.icon" *ngIf="item.icon"></span>
-      <span *ngIf="item.link"
-        ><a [routerLink]="item.link">{{ item.label }}</a></span
-      >
-      <span *ngIf="!item.link">{{ item.label }}</span>
+      <span *ngIf="item.icon" nz-icon [nzType]="item.icon"></span>
+      <span *ngIf="item.link">
+        <a [routerLink]="item.link">{{ item.label | translate }}</a>
+      </span>
+      <span *ngIf="!item.link">{{ item.label | translate }}</span>
     </li>
     <li
       *ngIf="item.children"
       nz-submenu
       [nzPaddingLeft]="level * spacerPx"
       [nzOpen]="item.open"
-      [nzTitle]="item.title"
+      [nzTitle]="item.title | translate"
       [nzIcon]="item.icon"
       [nzDisabled]="item.disabled"
     >
