--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,4 @@
-@import 'ag-grid-community/styles/ag-grid.css';
-@import 'ag-grid-community/styles/ag-theme-alpine.css';
+@import 'customize-ag-grid/styles';
 @import 'custom-bootstrap/styles';
 @import 'link';
 @import 'validation';
