--- a/styles/_scroll.scss
+++ b/styles/_scroll.scss
@@ -14,7 +14,7 @@
     border-radius: 8px;
 
     &:active {
-      background-color: darken(var.$grey-color-3, 15%);
+      background-color: var.$grey-color-3-darken;
     }
   }
 }
