KAM-93: [FE] Create 'Administration' page Refactored mocks Refactored 'Servers' page Added mocks for 'Servers' page Added 'Roles' mocked data

--- a/src/app/pages/main/pages/servers/servers.component.html
+++ b/src/app/pages/main/pages/servers/servers.component.html
@@ -1,3 +1,1 @@
-<app-request-wrapper #dataList [request$]="getData$">
-  <app-grid [gridOptions]="gridOptions" [rowData]="$any(dataList.data)"></app-grid>
-</app-request-wrapper>
+<app-grid [gridOptions]="gridOptions" [rowData]="getData$"></app-grid>
