KAM-93: [FE] Create 'Administration' page Added create/edit role modal Added delete role function

--- a/src/app/widgets/reactive-fields/reactive-select/reactive-select.component.html
+++ b/src/app/widgets/reactive-fields/reactive-select/reactive-select.component.html
@@ -76,4 +76,4 @@
   </nz-form-control>
 </nz-form-item>
 
-<ng-template #defauldMaxTagPlaceholder let-selectedList>and {{ selectedList.length }} more selected</ng-template>
+<ng-template #defauldMaxTagPlaceholder let-selectedList>and {{ selectedList.length }} more</ng-template>
