--- a/src/app/pages/main/pages/administration/pages/roles/roles.component.html
+++ b/src/app/pages/main/pages/administration/pages/roles/roles.component.html
@@ -1,1 +1,10 @@
-<app-grid [gridOptions]="gridOptions" [rowData]="getData$"></app-grid>
+<div class="d-flex flex-column gap-4">
+  <app-button
+    type="primary"
+    class="align-self-end"
+    [label]="PREFIX + '.CREATE' | translate"
+    [action$]="getCreateRoleCallback$"
+  ></app-button>
+
+  <app-grid [gridOptions]="gridOptions" [rowData]="getData$"></app-grid>
+</div>
