KAM-93: [FE] Create 'Administration' page Added disable delete button

--- a/src/app/widgets/grid/renders/country-cell/country-cell.component.html
+++ b/src/app/widgets/grid/renders/country-cell/country-cell.component.html
@@ -1,1 +1,2 @@
-<span [class]="'fi fi-' + value" [style.font-size.px]="18"></span>
+<span *ngIf="showCountry" [class]="'fi fi-' + value" [style.font-size.px]="18"></span>
+<span *ngIf="!showCountry"> — </span>
