KAM-93: [FE] Create 'Administration' page Added edit user modal

--- a/src/app/widgets/grid/renders/country-cell/country-cell.component.html
+++ b/src/app/widgets/grid/renders/country-cell/country-cell.component.html
@@ -1,2 +1,2 @@
-<span *ngIf="showCountry" [class]="'fi fi-' + value" [style.font-size.px]="18"></span>
-<span *ngIf="!showCountry"> — </span>
+<span *ngIf="showCountry && value" [class]="'fi fi-' + value" [style.font-size.px]="18"></span>
+<span *ngIf="!showCountry || !value"> — </span>
