--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,6 @@
 @import 'customize-ag-grid/styles';
 @import 'custom-bootstrap/styles';
+@import 'custom-ant-disign/styles';
 @import 'link';
 @import 'validation';
 @import 'scroll';
