--- a/src/app/pages/authorize/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/authorize/pages/sign-up/sign-up.component.html
@@ -34,7 +34,8 @@
       ></app-button>
     </div>
   </div>
-  <form nz-form nzLayout="vertical" [formGroup]="form">
+
+  <div class="d-flex flex-column gap-6">
     <app-reactive-input
       fieldId="login"
       [label]="'authorize.signUp.userName' | translate"
@@ -47,13 +48,13 @@
       [textBefore]="passwordBeforeTextTmp"
       [control]="form.controls.password"
     ></app-reactive-input>
-  </form>
-  <app-button
-    class="align-self-end"
-    type="primary"
-    [label]="'authorize.signUp.signUp' | translate"
-    [action$]="signUp$"
-  ></app-button>
+    <app-button
+      class="align-self-end"
+      type="primary"
+      [label]="'authorize.signUp.signUp' | translate"
+      [action$]="signUp$"
+    ></app-button>
+  </div>
 </div>
 
 <ng-template #userBeforeTextTmp>
