--- a/src/app/widgets/reactive-fields/reactive-text-editor/reactive-text-editor.component.html
+++ b/src/app/widgets/reactive-fields/reactive-text-editor/reactive-text-editor.component.html
@@ -1,7 +1,11 @@
-<nz-form-item *ngIf="control" [class.validation]="control.dirty && (getErrorMessage | executeWith : control.errors)">
+<nz-form-item
+  *ngIf="control"
+  [class.validation]="control.dirty && (getErrorMessage | executeWith : control.errors)"
+  [class.mb-0]="noMarginBottom"
+  [class.mb-3]="!noMarginBottom"
+>
   <nz-form-label
     [nzFor]="fieldId"
-    [nzRequired]="!noValidationMark && hasRequiredValidator"
     [nzTooltipTitle]="tooltipTitle"
     [nzTooltipIcon]="tooltipIcon"
     [nzLabelAlign]="labelAlign"
@@ -9,6 +13,7 @@
     [nzSpan]="labelSpan"
   >
     {{ label }}
+    <span *ngIf="!noValidationMark && hasRequiredValidator" class="required">*</span>
   </nz-form-label>
   <nz-form-control
     [nzValidateStatus]="status"
